--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,36 @@
 {
+    "name": "konadu-prince/mims-microfinance-system",
+    "description": "Microfinance Information Management System for African markets",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Konadu Prince",
+            "email": "your-email@example.com"
+        }
+    ],
     "require": {
+        "php": ">=8.1",
         "phpmailer/phpmailer": "^6.9"
+    },
+    "require-dev": {
+    },
+    "autoload": {
+        "psr-4": {
+            "MIMS\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MIMS\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-html coverage"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
     }
 }
